// Copyright 2024 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


message CloudkmsBetaEkmConnection {
  string name = 1;
  string create_time = 2;
  repeated CloudkmsBetaEkmConnectionServiceResolvers service_resolvers = 3;
  string etag = 4;
  string project = 5;
  string location = 6;
}

message CloudkmsBetaEkmConnectionServiceResolvers {
  string service_directory_service = 1;
  string endpoint_filter = 2;
  string hostname = 3;
  repeated CloudkmsBetaEkmConnectionServiceResolversServerCertificates server_certificates = 4;
}

message CloudkmsBetaEkmConnectionServiceResolversServerCertificates {
  string raw_der = 1;
  bool parsed = 2;
  string issuer = 3;
  string subject = 4;
  repeated string subject_alternative_dns_names = 5;
  string not_before_time = 6;
  string not_after_time = 7;
  string serial_number = 8;
  string sha256_fingerprint = 9;
}

message ApplyCloudkmsBetaEkmConnectionRequest {
  CloudkmsBetaEkmConnection resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteCloudkmsBetaEkmConnectionRequest {
  string service_account_file = 1;
  CloudkmsBetaEkmConnection resource = 2;
}

message ListCloudkmsBetaEkmConnectionRequest {
  string service_account_file = 1;
  string Project = 2;
  string Location = 3;
}

message ListCloudkmsBetaEkmConnectionResponse {
  repeated CloudkmsBetaEkmConnection items = 1;
}

service CloudkmsBetaEkmConnectionService {
  rpc ApplyCloudkmsBetaEkmConnection(ApplyCloudkmsBetaEkmConnectionRequest) returns (CloudkmsBetaEkmConnection);
  rpc DeleteCloudkmsBetaEkmConnection(DeleteCloudkmsBetaEkmConnectionRequest) returns (google.protobuf.Empty);
  rpc ListCloudkmsBetaEkmConnection(ListCloudkmsBetaEkmConnectionRequest) returns (ListCloudkmsBetaEkmConnectionResponse);
}
